assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
/* website rules start */

.general-content{
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
}

.subtitle{
    font-family: 'Roboto', sans-serif;
    text-transform: uppercase;
    margin-bottom: 0;
}

.silver-sand-bg{
    background-color: #B0B8B8;
    padding: 3rem 2.5rem;
}

.spanish-grey-bg{
    background-color: #969C9B;
    padding: 3rem 2.5rem;
}

.info-button{
    background-color: #505353;
    color:#B0B8B8;
}

.info-button:hover{
    color:#A3320B
}

/* website rules end */

/* NavBar Start */
.active {
    color: #A3320B !important;
}

.navbar {
    background-color: #505353;
}


.nav-link {
    color: #B0B8B8;
    font-family: 'Roboto', sans-serif;
    font-size:20px;
}

.navbar-toggler{
    background-color:#A3320B;
}

.navbar-dark .navbar-nav .nav-link:hover{
    color:#A3320B;
}

.navbar-dark .navbar-brand {
    text-transform: uppercase;
    font-size: 40px;
    color:#A3320B;
}

@media only screen and (max-width: 500px){
.navbar-dark .navbar-brand {
    font-size: 20px;
    }
}

.nav-link-group{
    text-align: center;
}
/* NavBar End */


/* Hero images and text start */
.hero-image {
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
    height: 60vh;
    width: auto;
    text-align: center;
}

.index-hero-text{
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: #A3320B;
    font-size: 5vw;
    
}

@media only screen and (max-width: 992px){
.index-hero-text{
    font-size: 40px;
    }
}

.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.5);
}

.index-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-index.jpg);
}

.music-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-music.jpg);
}

.photos-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-photos.png);
}

.videos-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-videos.jpg);
}

.tour-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-tour.jpeg);
}

.about-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-about.jpg);
}

.contact-hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/header-contact.jpg);
}
/* Hero images and text end */

/* index page start */

.welcome{
    text-align: center;
}

.studio-index{
    height: auto;
    width: 30vw;
}

@media only screen and (max-width: 992px){
.studio-index{
    width: 240px;
    height: auto;
    }
}


.center-img{
    text-align: center;
}

.heart-5-index-img{
    height:auto;
    width:30vw;
    padding-bottom: 10px;
}

@media only screen and (max-width: 767.98px){
.heart-5-index-img{
    width: 240px;
    height: auto;
    }
}


/* index page end */

/* music page start */
.album-covers{
    height:auto;
    width:30vw ;
    padding-bottom: 1vh;
}

@media only screen and (max-width: 992px){
.album-covers{
    width: 350px;
    height: auto;
    }
}

@media only screen and (max-width: 425px){
.album-covers{
    width: 250px;
    height: auto;
    }
}

.tracklist li{
    font-family: 'Open Sans', sans-serif;
    font-size: 18px;
    padding-bottom: 1vh;
    list-style: none;
}

.tracklist{
    padding-left: 0px;

}

.album-title{
    text-align: left;
    padding-bottom: 10px;
}

/* music page end */

/* photo page start */

.photo-container{
text-align: center;
}

.photo-gallery{
    width:22vw;
    height: auto;
    padding: 10px;
}

@media only screen and (max-width: 992px){
.photo-gallery{
    width: 280px;
    height: auto;
    }
}
@media only screen and (max-width: 350px){
.photo-gallery{
    width: 240px;
    height: auto;
    }
}

/* photo page end */

/* video page Start */

/* Credit ID= 2 Start */
.video-container{
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden; 
}

.music-videos{
 position: absolute;
    top: 0; 
    left: 0;
    width: 100%;
    height: 100%;
    padding-bottom: 10px;
}

/* Credit ID= 2 End */
/* video page end */

/* about page start */
.about-titles{
    padding-bottom: 20px;
}
.about-picture-container{
    text-align: center;
}

.about-picture{
    width:25vw;
    height: auto;
    padding-bottom: 10px;
}

@media only screen and (max-width: 992px){
.about-picture{
    width: 280px;
    height: auto;
    }
}

/* about page start */
.rep-label{
    padding-bottom: 100px;
}


/* about page end */

/* tour page start */
/* Credit ID= 3 Start */
.timeline-item {
    padding: 4em 2em 0em 2em;
    position: relative;
    color: #000000;
    border-left: 1px solid;
    border-color: #505353;
}

.timeline-item:before {
    content: attr(data-dates);
    position: absolute;
    left: 2.5em;
    top: 3em;
    font-family: 'Roboto', sans-serif;
    display: block;
    font-weight: 400;
    font-size: 0.8em;
    padding: 0;
    margin: 0;
}

.timeline-item:after {
    width: 12px;
    height: 12px;
    display: block;
    top: 2.4em;
    position: absolute;
    left: -6px;
    border-radius: 12px;
    content: '';
    background: #A3320B;
}

.history-items {
    margin-bottom: 30px;
}

/* Credit ID= 3 End */

/* tour page end */

/* contact us page start */

.sl-contact{
padding-right: 1.5em;
}
/* Credit ID=4 Start */

/* Style inputs with type="text", select elements and textareas */
input[type=email], input[type=text], select, textarea {
  width: 100%; /* Full width */
  padding: 12px; /* Some padding */ 
  border: 1px solid #A3320B; /* Gray border */
  border-radius: 4px; /* Rounded borders */
  box-sizing: border-box; /* Make sure that padding and width stays in place */
  margin-top: 6px; /* Add a top margin */
  margin-bottom: 16px; /* Bottom margin */
  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
  background-color:#B0B8B8;
}
form label {
    font-family: 'Roboto', sans-serif;
    text-transform: uppercase;
}
/* When moving the mouse over the submit button, add a darker green color */

/* Credit ID=5 End */
/* contact us page end */


/* Footer Start */

footer {
    background-color: #505353;
    padding: 1rem 1rem;
}
.sl-footer{
    text-align: center;
}

.fab{
    color: #000000;
    
    font-size: 30px;
    width: 30px;
    text-decoration: none;
}

.fab:hover{
    color:#A3320B;
}

/* Footer End */

